# btop-macpro

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: btop.cpp  btop_config.cpp  btop_config.hpp  btop_draw.cpp  btop_input.cpp  btop_menu.cpp  btop_shared.hpp  btop_tools.cpp  btop_tools.hpp
src/osx/: btop_collect.cpp  smc.hpp
